--- a/Google Keep/index.html
+++ b/Google Keep/index.html
@@ -1,24 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>Aman's Keep</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="heading">
-        <h1><i class="fas fa-sticky-note"></i> Aman's keep</h1>
+      <h1><i class="fas fa-sticky-note"></i> Aman's keep</h1>
     </div>
 
     <div class="btn-div">
-        <button class="learn-more add" id="add">
+      <button class="learn-more add" id="add">
         <span class="circle" aria-hidden="true">
-            <span class="icon arrow"></span>
+          <span class="icon arrow"></span>
         </span>
         <span class="button-text">Add note</span>
-    </button>
+      </button>
     </div>
 
     <!-- <div class="note">
@@ -30,9 +36,6 @@
         <div class="main"></div>
         <textarea></textarea>
     </div> -->
-
     <script src="./script.js"></script>
-</body>
+  </body>
 </html>
-
-
