--- a/Js Rivison/interviewPrep.html
+++ b/Js Rivison/interviewPrep.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
+    <div id="content">
+      <h2>Hello Coders</h2>
+    </div>
     <script src="./interviewPerp.js"></script>
-</body>
+  </body>
 </html>
